setTimeout .refresh() to fix ticks alignment.  Need to do it only for ticks...

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
   margin-bottom: 30px;
 }
 .demoWrapper {
-  display: flex;
+  display: block;
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
